Fixed progress bars to be bottom-aligned and progress labels to be vertically centered on IE

--- a/src/_scss/pages/landing.scss
+++ b/src/_scss/pages/landing.scss
@@ -56,6 +56,8 @@
 
     table {
         table-layout: fixed;
+        height: 100%;
+        min-height:1px;
 
         .row-10 {
             width: 10%;
@@ -94,9 +96,13 @@
 
     .usa-da-recent-submission-status {
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         .usa-da-status-label {
             padding-right: 15px;
+            flex: 0 1 auto;
         }
     }
 
